db-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: db-svc
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app: db
