web-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: web-svc
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  selector:
    app: web
