web-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: app
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  path: /
  to:
    kind: Service
    name: web-svc
    weight: 100
  port:
    targetPort: 5000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
